[package]
name = "md5-rs"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
lto = true
incremental = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
crunchy = "0.2.2"

[dev-dependencies]
flame = "0.2.2"

